# ArcticDownloader-lin

./: .gitignore  Cargo.toml  ComfyUI-Easy-Install.bat  README.md  README.public.md  io.github.ArcticDownloader.yaml
.github/workflows/: release-windows.yml
ComfyUI/: Start ComfyUI.bat  Update ComfyUI and Nodes.bat
ComfyUI/Add-Ons/: FlashAttention.bat  Insightface.bat  Nunchaku.bat  SageAttention.bat  SageAttention3.bat  Trellis2 (requires Torch 2.8.0+cu128).bat
ComfyUI/Add-Ons/Tools/: AutoRun.bat  ComfyUI-Version-Switcher.bat  Long-Paths-Enabler.bat
ComfyUI/Add-Ons/Tools/Helper-CEI/: Update ComfyUI.bat  Update Easy-Install.bat
ComfyUI/Add-Ons/Torch-Pack/: Torch 2.7.1+cu128.bat  Torch 2.8.0+cu128.bat  Torch 2.9.1+cu130 (default).bat
ComfyUI/ComfyUI/user/default/workflows/Getting Started/: 0 Help and Resources.json  3 Juggernaut Reborn txt2img + Lora.json  4 Juggernaut Reborn txt2img + ControlNet.json  5a Z-Image Turbo Fp8 AIO txt2img.json  5b Z-Image Turbo Fp8 txt2img.json  (+3 more)
ComfyUI/update/: update_comfyui_and_python_dependencies.bat
assets/: style.css
data/: catalog.json  io.github.ArcticDownloader.desktop  update.example.json
flatpak/: dev.wknd.ArcticDownloader.yaml  io.github.ArcticDownloader.yaml
installer/: ArcticDownloader.iss
packaging/: README.md  build-packages.sh
packaging/arch/: PKGBUILD
packaging/aur-bin/: .SRCINFO  PKGBUILD  README.md
packaging/debian/debian/: changelog  control  copyright  rules
packaging/fedora/: arctic-comfyui-helper.spec
packaging/linux/: io.github.ArcticHelper.desktop
scripts/: build-release-linux.sh  build-release.ps1  memory-leak-check.ps1  release-linux.sh  release.ps1  update-aur-bin.sh  verify-release-linux.sh  verify-release.ps1
src/: app.rs  catalog.rs  config.rs  download.rs  env_flags.rs  lib.rs  main.rs  model.rs  preview.rs  ram.rs  ui.rs  updater.rs  vram.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
win_ref/: main.rs
