[package]
name = "arctic-downloader"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
adw = { package = "libadwaita", version = "0.6", features = ["v1_5"] }
anyhow = "1"
blake3 = "1"
futures = "0.3"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
directories = "5"
env_logger = "0.11"
log = "0.4"
gdk-pixbuf = "0.19"
percent-encoding = "2"
sysinfo = "0.30"
