[package]
name = "arctic-downloader-tauri"
version = "0.3.4"
edition = "2021"
rust-version = "1.76"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt"] }
tokio-util = { version = "0.7", features = ["rt"] }
arctic-downloader = { path = ".." }
